--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@types/node": "^20.12.5",
+        "dayjs": "^1.11.10",
         "pinia": "^2.1.7",
         "sass": "^1.72.0",
         "vue": "^3.4.21",
