--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@types/node": "^20.12.5",
+        "ant-design-vue": "^4.2.1",
         "dayjs": "^1.11.10",
         "pinia": "^2.1.7",
         "sass": "^1.72.0",
@@ -21,6 +22,7 @@
         "@vitejs/plugin-vue": "^5.0.4",
         "prettier": "^3.2.5",
         "typescript": "^5.2.2",
+        "unplugin-vue-components": "^0.27.0",
         "vite": "^5.2.0",
         "vue-tsc": "^2.0.6"
     }
