--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "lint-check": "eslint . --fix"
     },
     "dependencies": {
         "@types/node": "^20.12.5",
@@ -22,9 +23,16 @@
         "yup": "^1.4.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.8.0",
         "@vitejs/plugin-vue": "^5.0.4",
-        "prettier": "^3.2.5",
+        "eslint": "^8.46.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-vue": "^9.27.0",
+        "globals": "^15.8.0",
+        "prettier": "^3.3.3",
         "typescript": "^5.2.2",
+        "typescript-eslint": "^7.17.0",
         "unplugin-vue-components": "^0.27.0",
         "vite": "^5.2.0",
         "vue-tsc": "^2.0.6"
